[tool.poetry]
name = "clx.ai"
version = "0.1.0"
description = ""
authors = ["scott.lee <unlimited9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
SQLAlchemy = "^1.4.45"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
